k8s/manifests/ingress-webserver.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2024-08-27T01:23:22Z"
  generation: 1
  name: webserver
  namespace: unimed
  resourceVersion: "1601"
  uid: 55f200bb-f8f8-4bca-b456-7107246bd6e7
spec:
  ingressClassName: nginx
  rules:
  - host: app.192-168-39-235.nip.io
    http:
      paths:
      - backend:
          service:
            name: webserver
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
