k8s/manifests/statefulset-mysql.yml
apiVersion: v1
kind: Service
metadata:
  namespace: unimed
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: mysql
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: unimed
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: 'docker.io/library/mysql:8-debian'
        envFrom:
        - secretRef:
            name: mysql.env
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ 'ReadWriteOnce' ]
      resources:
        requests:
          storage: 1Gi
